--- a/tendenciacentral.html
+++ b/tendenciacentral.html
@@ -11,7 +11,7 @@
 
 
 
-<title>First observations</title>
+<title>Tendência Central</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -272,16 +272,10 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="first_observations.html">First Observations</a>
+  <a href="frequencia.html">Frequência Básica</a>
 </li>
 <li>
-  <a href="basic_workflow.html">Basic Workflow</a>
-</li>
-<li>
-  <a href="getting_sophisticated.html">Getting Sophisticated</a>
-</li>
-<li>
-  <a href="your_turn.html">Your Turn</a>
+  <a href="tendenciacentral.html">Medidas de Tendência Central</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -295,54 +289,154 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">First observations</h1>
+<h1 class="title toc-ignore">Tendência Central</h1>
 
 </div>
 
 
-<p>With this tutorial, we have a working example website that we will explore together. We’ll learn a few rules and look for patterns to get an understanding of what things do. And you can continue to use this website as a reference after the tutorial, along with <a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html"><strong>RStudio’s instructions for R Markdown websites</strong></a>.</p>
-<p>We’ll start our exploration online looking at the website architecture, then we’ll clone the repo to our local computers. Locally, we will explore further by going back and forth between the R Markdown editor and built webpages, and make modifications. Pushing to Github will make our modifications live!</p>
-<hr />
-<div id="exploring-online" class="section level2">
-<h2>Exploring online</h2>
-<p><br></p>
-<!---this is an html comment that works in Markdown --->
-<!--- I use the <br> html tag to force carriage returns in the text--->
-<div id="the-website-itself" class="section level3">
-<h3>The website itself</h3>
-<p>This website has 5 pages:</p>
+<pre><code>
+## Instalação de Pacotes
+
+```r
+#install.packages(&quot;e1071&quot;)
+library(e1071)</code></pre>
+<pre><code>## 
+## Attaching package: &#39;e1071&#39;</code></pre>
+<pre><code>## The following object is masked from &#39;package:Hmisc&#39;:
+## 
+##     impute</code></pre>
+<div id="amostra" class="section level2">
+<h2>Amostra</h2>
+<pre class="r"><code>amostra &lt;- c(2,3,6,9)</code></pre>
+</div>
+<div id="média" class="section level2">
+<h2>Média</h2>
+<pre class="r"><code>mean(amostra)</code></pre>
+<pre><code>## [1] 5</code></pre>
+</div>
+<div id="mediana" class="section level2">
+<h2>Mediana</h2>
+<pre class="r"><code>median(amostra)</code></pre>
+<pre><code>## [1] 4.5</code></pre>
+</div>
+<div id="sumarização-da-amostra" class="section level2">
+<h2>Sumarização da amostra</h2>
+<pre class="r"><code>summary(amostra)</code></pre>
+<pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##    2.00    2.75    4.50    5.00    6.75    9.00</code></pre>
+</div>
+<div id="gráficos" class="section level2">
+<h2>Gráficos</h2>
+<div id="gráfico-de-barras" class="section level3">
+<h3>Gráfico de barras</h3>
+<pre class="r"><code>barplot(amostra)</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
+</div>
+<div id="histograma-com-frequência-simples" class="section level3">
+<h3>Histograma com frequência simples</h3>
+<pre class="r"><code>hist(amostra)</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
+</div>
+<div id="histograma-com-frequência-relativa" class="section level3">
+<h3>Histograma com frequência relativa</h3>
+<pre class="r"><code>hist(amostra, probability = T)</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-8-1.png" width="672" /></p>
+</div>
+<div id="histograma-com-frequência-relativa-e-com-a-densidade" class="section level3">
+<h3>Histograma com frequência relativa e com a densidade</h3>
+<pre class="r"><code>hist(amostra, probability = T)
+lines(density(amostra))</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
+</div>
+<div id="assimetria" class="section level3">
+<h3>Assimetria</h3>
+<pre class="r"><code>skewness(amostra)</code></pre>
+<pre><code>## [1] 0.2371708</code></pre>
+</div>
+<div id="curtose" class="section level3">
+<h3>Curtose</h3>
+<pre class="r"><code>kurtosis(amostra)</code></pre>
+<pre><code>## [1] -2.115</code></pre>
+<p>Entendendo a análise no R</p>
 <ul>
-<li>Home</li>
-<li>First Observations</li>
-<li>Basic Workflow</li>
-<li>Getting Sophisticated</li>
-<li>Your Turn</li>
+<li>K=0, Mesocúrtica.</li>
+<li>K&lt;0, Platicúrtica.</li>
+<li>K&gt;0, Leptocúrtica.</li>
 </ul>
-<p><code>github.io</code> means that there is a Github repo behind this website, and we also know the username and repo name:</p>
-<p><strong><a href="http://jules32.github.io/rmarkdown-website-tutorial" class="uri">http://jules32.github.io/rmarkdown-website-tutorial</a></strong> &lt;=&gt; <strong><a href="https://github.com/jules32/rmarkdown-website-tutorial" class="uri">https://github.com/jules32/rmarkdown-website-tutorial</a></strong></p>
-<p>(Note: you can have github websites point to different urls if you don’t want the <code>github.io</code>.)</p>
-<p><br></p>
-</div>
-<div id="the-websites-repo" class="section level3">
-<h3>The website’s repo</h3>
-<p>Let’s go to <strong><a href="https://github.com/jules32/rmarkdown-website-tutorial" class="uri">https://github.com/jules32/rmarkdown-website-tutorial</a></strong>.</p>
-<p><strong>First, note the <code>gh-pages</code> branch</strong> - this is critical for building free webpages. You can usually name branches whatever you want, but the <code>gh-pages</code> name means it can be built as a website. <a href="https://help.github.com/articles/setting-the-default-branch/">I set it as my default branch</a>.</p>
-<p><img src="images/gh-pages.png" /></p>
-<p><br></p>
-<p><strong>Now let’s look at the filenames</strong>. We can recognize the names of the webpages we’ve seen, and there is also a <code>_site.yml</code> file, which is the website’s configuration file. The simplest website possible would have 2 files only: <code>_site.yml</code> and <code>index.Rmd</code></p>
-<p><img src="https://docs.google.com/drawings/d/1jnXfeJ3i-fwd-t49S5FyeMAX3cJSoCYbyZLLTqFZd7w/pub?w=960&amp;h=720" /></p>
-<p><br></p>
+<p>Portanto, nossa amostra é Platicúrtica, ou seja, com mais achata.</p>
 </div>
 </div>
-<div id="fork-to-your-account-clone-to-your-computer" class="section level2">
-<h2>Fork to your account, clone to your computer</h2>
-<p>Let’s start digging deeper and playing with this.</p>
-<ol style="list-style-type: decimal">
-<li><p>Fork the <a href="https://github.com/jules32/rmarkdown-website-tutorial">jules32/rmarkdown-website-tutorial</a> repo into your own account.</p></li>
-<li><p>Edit the URL for the website by replacing <code>jules32</code> with your GitHub username</p></li>
-<li><p>Clone to your local computer using RStudio (preferred) the <a href="https://desktop.github.com/">Desktop App</a>, or the command line.</p></li>
-</ol>
-<p><img src="https://docs.google.com/drawings/d/1yy2VFQy4QqxfOzt-XtTSNA91qoCI7jPo0ob7Pm89SBg/pub?w=960&amp;h=720" /></p>
+<div id="análise-ii" class="section level1">
+<h1>Análise II</h1>
+<div id="amostra-1" class="section level3">
+<h3>Amostra</h3>
+<pre class="r"><code>amostra2 &lt;- c(7,1,5,2,3,1,6)
+amostra2</code></pre>
+<pre><code>## [1] 7 1 5 2 3 1 6</code></pre>
+</div>
+<div id="média-1" class="section level2">
+<h2>Média</h2>
+<pre class="r"><code>mean(amostra2)</code></pre>
+<pre><code>## [1] 3.571429</code></pre>
+</div>
+<div id="mediana-1" class="section level2">
+<h2>Mediana</h2>
+<pre class="r"><code>median(amostra2)</code></pre>
+<pre><code>## [1] 3</code></pre>
+</div>
+<div id="moda" class="section level2">
+<h2>Moda</h2>
+<p>Lembre-se que é preciso ordenar</p>
+<pre class="r"><code>as.numeric(names(table(amostra2))[table(amostra2) == max(table(amostra2))])</code></pre>
+<pre><code>## [1] 1</code></pre>
+</div>
+<div id="sumarização-da-amostra-1" class="section level2">
+<h2>Sumarização da amostra</h2>
+<pre class="r"><code>summary(amostra2)</code></pre>
+<pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##   1.000   1.500   3.000   3.571   5.500   7.000</code></pre>
+</div>
+<div id="gráficos-1" class="section level2">
+<h2>Gráficos</h2>
+<div id="gráfico-de-barras-1" class="section level3">
+<h3>Gráfico de barras</h3>
+<pre class="r"><code>barplot(amostra2)</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-17-1.png" width="672" /></p>
+</div>
+<div id="histograma-com-frequência-simples-1" class="section level3">
+<h3>Histograma com frequência simples</h3>
+<pre class="r"><code>hist(amostra2)</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-18-1.png" width="672" /></p>
+</div>
+<div id="histograma-com-frequência-relativa-1" class="section level3">
+<h3>Histograma com frequência relativa</h3>
+<pre class="r"><code>hist(amostra2, probability = T)</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-19-1.png" width="672" /></p>
+</div>
+<div id="histograma-com-frequência-relativa-e-com-a-densidade-1" class="section level3">
+<h3>Histograma com frequência relativa e com a densidade</h3>
+<pre class="r"><code>hist(amostra2, probability = T)
+lines(density(amostra2))</code></pre>
+<p><img src="tendenciacentral_files/figure-html/unnamed-chunk-20-1.png" width="672" /></p>
+</div>
+<div id="assimetria-1" class="section level3">
+<h3>Assimetria</h3>
+<pre class="r"><code>skewness(amostra2)</code></pre>
+<pre><code>## [1] 0.1915218</code></pre>
+</div>
+<div id="curtose-1" class="section level3">
+<h3>Curtose</h3>
+<pre class="r"><code>kurtosis(amostra2)</code></pre>
+<pre><code>## [1] -1.90821</code></pre>
+<div id="fontes-de-estudos" class="section level4">
+<h4>Fontes de estudos</h4>
+<ul>
+<li><a href="https://comunidadeestatistica.landen.co/">Comunidade de Estatística</a></li>
+<li><a href="https://www.datascienceacademy.com.br">DataScience Academy</a></li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 
 
