Aulas de medidas de dispersão

--- a/frequencia.html
+++ b/frequencia.html
@@ -275,6 +275,9 @@ $(document).ready(function () {
   <a href="frequencia.html">Frequência Básica</a>
 </li>
 <li>
+  <a href="medidasdispersao.html">Medidas de Dispersão</a>
+</li>
+<li>
   <a href="tendenciacentral.html">Medidas de Tendência Central</a>
 </li>
       </ul>
