--- a/tendenciacentral.html
+++ b/tendenciacentral.html
@@ -275,6 +275,9 @@ $(document).ready(function () {
   <a href="frequencia.html">Frequência Básica</a>
 </li>
 <li>
+  <a href="medidasdispersao.html">Medidas de Dispersão</a>
+</li>
+<li>
   <a href="tendenciacentral.html">Medidas de Tendência Central</a>
 </li>
       </ul>
@@ -294,17 +297,16 @@ $(document).ready(function () {
 </div>
 
 
-<pre><code>
-## Instalação de Pacotes
-
-```r
-#install.packages(&quot;e1071&quot;)
+<div id="instalação-de-pacotes" class="section level2">
+<h2>Instalação de Pacotes</h2>
+<pre class="r"><code>#install.packages(&quot;e1071&quot;)
 library(e1071)</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;e1071&#39;</code></pre>
 <pre><code>## The following object is masked from &#39;package:Hmisc&#39;:
 ## 
 ##     impute</code></pre>
+</div>
 <div id="amostra" class="section level2">
 <h2>Amostra</h2>
 <pre class="r"><code>amostra &lt;- c(2,3,6,9)</code></pre>
