--- a/medidasdispersao.html
+++ b/medidasdispersao.html
@@ -9,10 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Jaqueline at [Brazil], 24/06/2020" />
 
 
-<title>Estudos em R</title>
+<title>Medidas de Dispersão</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -293,21 +292,32 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Estudos em R</h1>
-<h4 class="author"><a href="https://github.com/dhelly">Jaqueline</a> at [Brazil], 24/06/2020</h4>
+<h1 class="title toc-ignore">Medidas de Dispersão</h1>
 
 </div>
 
 
-<hr />
-<p>Este repositório tem por objetivo salvar as anotações dos scripts em R dos meus estudos básicos de estatística.</p>
-<hr />
-<p><strong>Minhas Redes</strong></p>
+<div id="queremos-saber-o-quanto-distante-ou-próximo-os-valores-são-em-relação-a-média" class="section level2">
+<h2>Queremos saber o quanto distante ou próximo os valores são em relação a média</h2>
+<div id="dataframe-que-será-utilizado" class="section level3">
+<h3>Dataframe que será utilizado</h3>
+<pre class="r"><code>head(iris)</code></pre>
+<pre><code>##   Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+## 1          5.1         3.5          1.4         0.2  setosa
+## 2          4.9         3.0          1.4         0.2  setosa
+## 3          4.7         3.2          1.3         0.2  setosa
+## 4          4.6         3.1          1.5         0.2  setosa
+## 5          5.0         3.6          1.4         0.2  setosa
+## 6          5.4         3.9          1.7         0.4  setosa</code></pre>
+<div id="fontes-de-estudos" class="section level4">
+<h4>Fontes de estudos</h4>
 <ul>
-<li><a href="https://github.com/dhelly"><strong>Github</strong></a></li>
-<li><a href="https://twitter.com/dhelly"><strong>Twitter</strong></a></li>
-<li><a href="https://www.linkedin.com/in/jaquelinefernandespb/"><strong>LinkedIn</strong></a></li>
+<li><a href="https://comunidadeestatistica.landen.co/">Comunidade de Estatística</a></li>
+<li><a href="https://www.datascienceacademy.com.br">DataScience Academy</a></li>
 </ul>
+</div>
+</div>
+</div>
 
 
 
