--- a/medidasdispersao.html
+++ b/medidasdispersao.html
@@ -297,8 +297,10 @@ $(document).ready(function () {
 </div>
 
 
-<div id="queremos-saber-o-quanto-distante-ou-próximo-os-valores-são-em-relação-a-média" class="section level2">
-<h2>Queremos saber o quanto distante ou próximo os valores são em relação a média</h2>
+<div style="margin-bottom:100px;">
+
+</div>
+<p>Queremos saber o quanto distante ou próximo os valores são em relação a média</p>
 <div id="dataframe-que-será-utilizado" class="section level3">
 <h3>Dataframe que será utilizado</h3>
 <pre class="r"><code>head(iris)</code></pre>
@@ -309,11 +311,119 @@ $(document).ready(function () {
 ## 4          4.6         3.1          1.5         0.2  setosa
 ## 5          5.0         3.6          1.4         0.2  setosa
 ## 6          5.4         3.9          1.7         0.4  setosa</code></pre>
+</div>
+<div id="explorando-os-dados" class="section level3">
+<h3>Explorando os dados</h3>
+<pre class="r"><code>dim(iris)</code></pre>
+<pre><code>## [1] 150   5</code></pre>
+</div>
+<div id="gerando-amostras" class="section level3">
+<h3>Gerando amostras</h3>
+<pre class="r"><code>sl &lt;- iris$Sepal.Length
+length(sl)</code></pre>
+<pre><code>## [1] 150</code></pre>
+<div id="amplitude-amostral" class="section level4">
+<h4>Amplitude amostral</h4>
+<p>É a mais simples medida - Maior menos o Menor valor. o método <strong>range</strong> retorna o valor máximo e o valor mínimo.</p>
+<pre class="r"><code>sl.h &lt;- diff(range(sl))
+sl.h</code></pre>
+<pre><code>## [1] 3.6</code></pre>
+</div>
+<div id="variância-amostral" class="section level4">
+<h4>Variância Amostral</h4>
+<pre class="r"><code>sl.var &lt;- var(sl)
+sl.var</code></pre>
+<pre><code>## [1] 0.6856935</code></pre>
+<p><em>Para calcular a variância populacional podemos multiplicar por (lenght(n) - 1)/lenght(n)</em></p>
+</div>
+</div>
+<div id="desvio-padrão-amostral" class="section level3">
+<h3>Desvio padrão amostral</h3>
+<pre class="r"><code>sl.sd &lt;- sd(sl)
+sl.sd</code></pre>
+<pre><code>## [1] 0.8280661</code></pre>
+</div>
+<div id="coeficiente-de-variação-amostral" class="section level3">
+<h3>Coeficiente de variação amostral</h3>
+<pre class="r"><code>sl.cv &lt;- sd(sl)/mean(sl)*100
+sl.cv</code></pre>
+<pre><code>## [1] 14.17113</code></pre>
+<p><em>Se o coeficiente for menor que 25% dizemos que ele é homogênio, se for maior dizemos que ele é heterogênio</em></p>
+<div style="margin-bottom:50px;">
+
+</div>
+</div>
+<div id="analisando-a-segunda-amostra---pental-length" class="section level1">
+<h1>Analisando a Segunda Amostra - Pental Length</h1>
+<pre class="r"><code>pl &lt;- iris$Petal.Length
+head(pl)</code></pre>
+<pre><code>## [1] 1.4 1.4 1.3 1.5 1.4 1.7</code></pre>
+<div id="amplitude-amostral-1" class="section level4">
+<h4>Amplitude amostral</h4>
+<p>É a mais simples medida - Maior menos o Menor valor. o método <strong>range</strong> retorna o valor máximo e o valor mínimo.</p>
+<pre class="r"><code>pl.h &lt;- diff(range(pl))
+pl.h</code></pre>
+<pre><code>## [1] 5.9</code></pre>
+</div>
+<div id="variância-amostral-1" class="section level4">
+<h4>Variância Amostral</h4>
+<pre class="r"><code>pl.var &lt;- var(pl)
+pl.var</code></pre>
+<pre><code>## [1] 3.116278</code></pre>
+<p><em>Para calcular a variância populacional podemos multiplicar por (lenght(n) - 1)/lenght(n)</em></p>
+</div>
+<div id="desvio-padrão-amostral-1" class="section level3">
+<h3>Desvio padrão amostral</h3>
+<pre class="r"><code>pl.sd &lt;- sd(pl)
+pl.sd</code></pre>
+<pre><code>## [1] 1.765298</code></pre>
+</div>
+<div id="coeficiente-de-variação-amostral-1" class="section level3">
+<h3>Coeficiente de variação amostral</h3>
+<pre class="r"><code>pl.cv &lt;- sd(pl)/mean(pl)*100
+pl.cv</code></pre>
+<pre><code>## [1] 46.97441</code></pre>
+<p><em>Se o coeficiente for menor que 25% dizemos que ele é homogênio, se for maior dizemos que ele é heterogênio</em></p>
+<div style="margin-bottom:50px;">
+
+</div>
+</div>
+<div id="comparação" class="section level2">
+<h2>Comparação</h2>
+<p>Média</p>
+<pre class="r"><code>c(mean(sl), mean(pl))</code></pre>
+<pre><code>## [1] 5.843333 3.758000</code></pre>
+<p>Amplitude</p>
+<pre class="r"><code>c(sl.h, pl.h)</code></pre>
+<pre><code>## [1] 3.6 5.9</code></pre>
+<p>Variância</p>
+<pre class="r"><code>c(sl.var, pl.var)</code></pre>
+<pre><code>## [1] 0.6856935 3.1162779</code></pre>
+<p>Desvio padrão</p>
+<pre class="r"><code>c(sl.sd, pl.sd)</code></pre>
+<pre><code>## [1] 0.8280661 1.7652982</code></pre>
+<p>Coeficiente de variação</p>
+<pre class="r"><code>c(sl.cv, pl.cv)</code></pre>
+<pre><code>## [1] 14.17113 46.97441</code></pre>
+<div style="margin-bottom:50px;">
+
+</div>
+</div>
+<div id="comparando-graficamente" class="section level2">
+<h2>Comparando graficamente</h2>
+<pre class="r"><code>plot(sl)
+abline(h = mean(sl))</code></pre>
+<p><img src="medidasdispersao_files/figure-html/unnamed-chunk-18-1.png" width="672" /> a linha representa a média</p>
+<pre class="r"><code>plot(pl)
+abline(h = mean(pl))</code></pre>
+<p><img src="medidasdispersao_files/figure-html/unnamed-chunk-19-1.png" width="672" /></p>
+<div style="margin-bottom:50px;">
+
+</div>
 <div id="fontes-de-estudos" class="section level4">
 <h4>Fontes de estudos</h4>
 <ul>
 <li><a href="https://comunidadeestatistica.landen.co/">Comunidade de Estatística</a></li>
-<li><a href="https://www.datascienceacademy.com.br">DataScience Academy</a></li>
 </ul>
 </div>
 </div>
