atualização do menu

--- a/frequencia.html
+++ b/frequencia.html
@@ -280,6 +280,9 @@ $(document).ready(function () {
 <li>
   <a href="tendenciacentral.html">Medidas de Tendência Central</a>
 </li>
+<li>
+  <a href="graf_quantitativo.html">Gráficos Estatísticos</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
