--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Estudos em R</h1>
-<h4 class="author"><a href="https://github.com/dhelly">Jaqueline</a> at [Brazil], 24/06/2020</h4>
+<h4 class="author"><a href="https://jaqueline.dev">Jaqueline</a> at [Brazil], 24/06/2020</h4>
 
 </div>
 
