--- a/graf_quantitativo.html
+++ b/graf_quantitativo.html
@@ -342,17 +342,17 @@ amostra_dummy_civil &lt;- ifelse(amostra_est_civil == &quot;Solteiro(a)&quot;, &
 head(var_cat_nominais)</code></pre>
 <pre><code>##   amostra_sexo amostra_cor_olhos amostra_cigarro amostra_doente
 ## 1            F          Castanho         Fumante         Doente
-## 2            M          Castanho     Não Fumante          Sadio
-## 3            F             Verde     Não Fumante          Sadio
-## 4            M             Preto     Não Fumante         Doente
-## 5            M             Preto     Não Fumante         Doente
-## 6            M             Verde     Não Fumante         Doente
+## 2            F              Azul         Fumante         Doente
+## 3            F          Castanho     Não Fumante          Sadio
+## 4            M          Castanho         Fumante          Sadio
+## 5            M          Castanho         Fumante          Sadio
+## 6            M          Castanho         Fumante         Doente
 ##   amostra_est_civil amostra_dummy_civil
 ## 1       Solteiro(a)                   1
-## 2       Solteiro(a)                   1
-## 3       Solteiro(a)                   1
+## 2         Casado(a)                   0
+## 3         Casado(a)                   0
 ## 4       Solteiro(a)                   1
-## 5       Solteiro(a)                   1
+## 5         Casado(a)                   0
 ## 6       Solteiro(a)                   1</code></pre>
 <hr />
 </div>
